--- a/newborn.html
+++ b/newborn.html
@@ -56,7 +56,7 @@
 		      	<img src="imgs/s15.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
             <div class="card-body">
-              <p class="card-text text-justify">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text text-justify">শিশু অধিকারের সংগ্রাম জন্মলগ্ন থেকেই শুরু হয়। বাংলাদেশে পাঁচ বছরের কম বয়সী শিশুদের মধ্যে মাত্র ৫৬ শতাংশ জন্মের সময় নিবন্ধিত হয়। এর অর্থ লক্ষ লক্ষ শিশু একটি পরিচয়ের অধিকার থেকে বঞ্চিত হচ্ছে। ন্যায়বিচার পাওয়া তাদের আরেকটি চ্যালেঞ্জ। বাংলাদেশে ১০২টি শিশু আদালত থাকা সত্ত্বেও কিশোর-কিশোরীদের জন্য যে বিচার ব্যবস্থা রয়েছে সেখানে ২৩ হাজারেরও বেশি মামলার এখনও নিষ্পত্তি হয়নি।</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -74,7 +74,7 @@
             <img src="imgs/s15.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
             <div class="card-body">
-              <p class="card-text text-justify">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text text-justify">বাংলাদেশে অনেক শিশুই সময়ের আগেই বড় হয়ে যেতে বাধ্য হয়। নিজেদের পরিবারের বেঁচে থাকার কৌশলের অংশ হিসেবে অনেক কিশোর-কিশোরীকে প্রায়ই কাজে পাঠানো হয় বা তাদের অপরিণত বয়সে বিয়ে দিয়ে দেয়া হয়। পাঁচ থেকে ১৭ বছর বয়সী প্রায় সাত শতাংশ শিশু কোনো না কোনো ধরনের শিশুশ্রমে জড়িত। এছাড়াও খুব অল্পবয়সী শিশুদের ঝুঁকিপূর্ণ কাজে নিযুক্ত করা অব্যাহত রয়েছে।</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -92,7 +92,7 @@
            <img src="imgs/s15.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
             <div class="card-body">
-              <p class="card-text text-justify">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text text-justify">বাল্যবিবাহ এবং অল্প বয়সে গর্ভাধারণ মেয়েদের স্বাস্থ্য এবং সুস্থতার জন্য গুরুতর সমস্যা এবং এটি তাদের স্বাস্থের ক্ষেত্রে আজীবন নেতিবাচক প্রভাব ফেলে। যেসব মেয়েদের বাল্যকালে বিয়ে হয়, তাদের স্কুল থেকে ঝরে পড়ার আশঙ্কা অনেক বেশি থাকে। তারা অপুষ্টিতে ভোগে, গর্ভাবস্থায় ও প্রসবকালীন জটিলতার কারণে অনেকেই অকালে মারা যায় এবং পরিণত বয়সে বিয়ে করা মেয়েদের তুলনায় বাড়িতেও তাদের বেশি সহিংসতার সম্মুখিন হতে হয়।</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -109,7 +109,7 @@
             <img src="imgs/s15.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
             <div class="card-body">
-              <p class="card-text text-justify">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text text-justify">শিশুদের প্রতি সহিংসতা, দুর্ব্যবহার, অবহেলা ও শোষণ রোধে এবং এসব ক্ষেত্রে প্রয়োজনীয় সাড়া প্রদান করতে একটি সমন্বিত জাতীয় শিশু সুরক্ষা ব্যবস্থা গড়ে তুলতে কাজ করছে ইউনিসেফ। আন্তর্জাতিক মানবাধিকারের মানদন্ড অনুযায়ী আইনের সংস্কার এবং নীতিমালা হালনাগাদ করার পাশাপাশি অধিকার সংক্রান্ত বিষয়গুলো প্রচার করতে নির্ভরযোগ্য প্রমাণ ও তথ্যভাণ্ডার তৈরির মাধ্যমে এটি করা হচ্ছে।</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
