--- a/newborn.html
+++ b/newborn.html
@@ -56,10 +56,34 @@
 		      	<img src="imgs/s15.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
             <div class="card-body">
-              <p class="card-text text-justify">শিশু অধিকারের সংগ্রাম জন্মলগ্ন থেকেই শুরু হয়। বাংলাদেশে পাঁচ বছরের কম বয়সী শিশুদের মধ্যে মাত্র ৫৬ শতাংশ জন্মের সময় নিবন্ধিত হয়। এর অর্থ লক্ষ লক্ষ শিশু একটি পরিচয়ের অধিকার থেকে বঞ্চিত হচ্ছে। ন্যায়বিচার পাওয়া তাদের আরেকটি চ্যালেঞ্জ। বাংলাদেশে ১০২টি শিশু আদালত থাকা সত্ত্বেও কিশোর-কিশোরীদের জন্য যে বিচার ব্যবস্থা রয়েছে সেখানে ২৩ হাজারেরও বেশি মামলার এখনও নিষ্পত্তি হয়নি।</p>
+
+<!-- Modal -->
+<div class="modal fade" id="s1Modal" tabindex="-1" aria-labelledby="s1ModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="s1ModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        শিশু অধিকারের সংগ্রাম জন্মলগ্ন থেকেই শুরু হয়। বাংলাদেশে পাঁচ বছরের কম বয়সী শিশুদের মধ্যে মাত্র ৫৬ শতাংশ জন্মের সময় নিবন্ধিত হয়। এর অর্থ লক্ষ লক্ষ শিশু একটি পরিচয়ের অধিকার থেকে বঞ্চিত হচ্ছে। ন্যায়বিচার পাওয়া তাদের আরেকটি চ্যালেঞ্জ। বাংলাদেশে ১০২টি শিশু আদালত থাকা সত্ত্বেও কিশোর-কিশোরীদের জন্য যে বিচার ব্যবস্থা রয়েছে সেখানে ২৩ হাজারেরও বেশি মামলার এখনও নিষ্পত্তি হয়নি।
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+              <p class="card-text text-justify">শিশু অধিকারের সংগ্রাম জন্মলগ্ন থেকেই শুরু হয়। বাংলাদেশে পাঁচ বছরের কম বয়সী শিশুদের মধ্যে মাত্র ৫৬ শতাংশ জন্মের সময় নিবন্ধিত হয়।</p>
               <div class="d-flex justify-content-between align-items-center">
+
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#s1Modal">
+  View
+</button>
+                 
                   <button type="button" class="btn btn-sm btn-outline-secondary">Link</button>
                 </div>
                 <small class="text-muted">9 mins</small>
