--- a/newborn.html
+++ b/newborn.html
@@ -221,7 +221,7 @@
 <script type="text/javascript">
 
 
-var myModal = document.getElementById('myModal')
+var myModal = document.getElementById('sModal')
 var myInput = document.getElementById('myInput')
 
 myModal.show();
