--- a/newborn.html
+++ b/newborn.html
@@ -221,15 +221,13 @@
 <script type="text/javascript">
 
 
-var myModal = document.getElementById('sModal')
-var myInput = document.getElementById('myInput')
-
-myModal.show();
-
-myModal.hide()
+var myModal = document.getElementById('sModal');
+var myInput = document.getElementById('myInput');
 
 myModal.addEventListener('shown.bs.modal', function () {
-  myInput.focus()
+  myInput.focus();
+myModal.show();
+myModal.hide();
 });
 
 $('.owl-carousel').owlCarousel({
