--- a/newborn.html
+++ b/newborn.html
@@ -224,6 +224,14 @@
 var myModal = document.getElementById('sModal');
 var myInput = document.getElementById('myInput');
 
+var myModal = new bootstrap.Modal(document.getElementById('sModal'), {
+  keyboard: false;
+
+myModal.show();
+myModal.hide();
+});
+
+
 myModal.addEventListener('shown.bs.modal', function () {
   myInput.focus();
 myModal.show();
