--- a/newborn.html
+++ b/newborn.html
@@ -220,11 +220,8 @@
    </script>
 <script type="text/javascript">
 
-var myModal = new bootstrap.Modal(document.getElementById('sModal'), {
-  keyboard: false;
-myModal.show();
-myModal.hide();
-});
+
+('#sModal').modal({ show: true });
 
 $('.owl-carousel').owlCarousel({
     rtl:true,
