--- a/newborn.html
+++ b/newborn.html
@@ -220,13 +220,9 @@
    </script>
 <script type="text/javascript">
 
-
-$(document).ready(function(){
-        $(".sbtn").click(function(){
-            $("#sModal").modal('show');
-        });
-    });
-
+  $(document).ready(function() {
+    $("#sModal").modal();
+  });
 
 $('.owl-carousel').owlCarousel({
     rtl:true,
