--- a/newborn.html
+++ b/newborn.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="/favicon.ico">
 
+<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
 <!---
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 -->
