--- a/gallery.html
+++ b/gallery.html
@@ -477,6 +477,10 @@
 
 <div class="line line-lg w-3x b-b m-auto"></div>
 
+   
+<img src="imgs/s11.png" alt="" class="img-full wrapper-xs bg-white>
+
+<div class="line line-lg w-3x b-b m-auto"></div>
 </div>
 		 </div>
 
