--- a/gallery.html
+++ b/gallery.html
@@ -474,6 +474,8 @@
 
     
 <img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white>
+<br>
+<img src="imgs/s11.png" alt="" class="img-full wrapper-xs bg-white>
 
 <div class="line line-lg w-3x b-b m-auto"></div>
 </div>
