--- a/gallery.html
+++ b/gallery.html
@@ -563,6 +563,12 @@
 			                                                         
 		        <h3 class="text-info"> The Mall BD </h3>
 				      </a>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://www.facebook.com/RoyalWearOfficial?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/royalwearbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Hijab Royal WearBD </h3>
+				      </a>
 				         </div>
 				    </div>
 			  </div>
