--- a/index.html
+++ b/index.html
@@ -581,6 +581,9 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 <div class="col-sm-12 text-center m-v p-v-xl">
 		      	<img src="imgs/s13.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<div class="fb-like" data-href="https://www.facebook.com/profile.php?id=100075473425112&amp;mibextid=ZbWKwL" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
+
 </div>	
 		 </div>
 		</section>
@@ -624,6 +627,8 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 </script>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
     
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="b7uJTg1q"></script>
 
 <script>
 
