--- a/index.html
+++ b/index.html
@@ -580,9 +580,14 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <div class="col-sm-12 text-center m-v p-v-xl">
 		      	<img src="imgs/s13.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
 <div class="fb-like" data-href="https://www.facebook.com/profile.php?id=100075473425112&amp;mibextid=ZbWKwL" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<div class="fb-post" data-href="https://www.facebook.com/20531316728/posts/10154009990506729/" data-width="500" data-show-text="true"><blockquote cite="https://www.facebook.com/20531316728/posts/10154009990506729/" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/facebook/">Facebook</a> on&nbsp;<a href="https://www.facebook.com/20531316728/posts/10154009990506729/">Thursday, August 27, 2015</a></blockquote></div>
 
 </div>	
 		 </div>
