--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 			  </div>
 
 <div class="col-sm-12 text-center m-v p-v-xl">
-		      	<img src="imgs/s13.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/coverhandsome.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
