--- a/index.html
+++ b/index.html
@@ -554,7 +554,11 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 			                                                         
 		        <h3 class="text-info"> বেনারসি শাড়ি </h3>
 				      </a>
-				         </div>
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://www.facebook.com/islampurmarket?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/islampurmarket.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Islampur Market </h3>
+				      </a>				         </div>
 				    </div>
 			  </div>
 
