--- a/index.html
+++ b/index.html
@@ -539,6 +539,13 @@ ACI Seed Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 <a href="https://wa.me/8801795715354" class="thumb-lg m-t-n-lg m-r-n-lg">
 Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 </h3>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>				     
+ 					
+<a href="https://cmed.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cmedhealth.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> CMED Health </h3>
+				      </a>
 				         </div>
 				    </div>
 			  </div>
