--- a/index.html
+++ b/index.html
@@ -590,7 +590,12 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 			                                                         
 		        <h3 class="text-info"> Hijab Royal WearBD </h3>
 				      </a>
-				         </div>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://wa.me/8801712545401" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cumillarosmalai.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Cumilla Rosmalai- কুমিল্লার মাতৃভান্ডার রসমালাই </h3>
+				      </a>				         </div>
 				    </div>
 			  </div>
 
