--- a/index.html
+++ b/index.html
@@ -570,6 +570,12 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 <a href="https://www.facebook.com/islampurmarket?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/islampurmarket.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Islampur Market </h3>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://gomedii.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/gomedii.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Go Medii </h3>
+				      </a>		
 				      </a>				         </div>
 				    </div>
 			  </div>
