--- a/ninetys.html
+++ b/ninetys.html
@@ -31,7 +31,7 @@
 		    <div class="row">
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
-		        <h1 class="text-dark"> Ninetys Information 🗞 </h1>
+		        <h1 class="text-dark"> Ninetys Information ☕ </h1>
 		        <p class="">some awesome tour i've done!</p>
 </div>
 
