--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-<a href="https://www.facebook.com/benarashiworld?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/benaroshi.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://www.facebook.com/benarashiworld?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/benarosi.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> বেনারসি শাড়ি </h3>
 				      </a>
