--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
 		        <h3 class="text-info">  Sangbad Pratidin</h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div> 
+
+<a href="http://bbc.com/bengali/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bbcbangla.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> BBC Bangla </h3>
+				      </a>
+				       <div class="line line-lg w-3x b-b b-danger m-auto"></div> 
 </p>
      </div>
     </div>
