--- a/index.html
+++ b/index.html
@@ -593,8 +593,17 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 <a href="https://gomedii.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/gomedii.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Go Medii </h3>
+				      </a>	
+
+
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://khaasfood.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/khaasfood.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Khaas Food</h3>
 				      </a>		
-				      </a>				         </div>
+
+	         </div>
 				    </div>
 			  </div>
 
