--- a/newborn.html
+++ b/newborn.html
@@ -35,7 +35,7 @@
 		    <div class="row">
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
-		        <h1 class="text-dark"> শিশুদের তথ্য আলাপন 📋</h1>
+		        <h1 class="text-dark"> শিশুদের তথ্য আলাপন 🎠 </h1>
 		        <p class="">some awesome tour i've done!</p>
 </div>
 
