--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
 <br>
 <img src="imgs/s11.png" alt="" class="img-full wrapper-xs bg-white>
 
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>
 		 </div>
 </section>
