--- a/index.html
+++ b/index.html
@@ -480,9 +480,10 @@
 			  </div> 
 
 <div class="col-sm-3 text-center">
-<img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white>
+<img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	        
 <br>
-<img src="imgs/s11.png" alt="" class="img-full wrapper-xs bg-white>
+<img src="imgs/s11.png" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>
