--- a/index.html
+++ b/index.html
@@ -482,8 +482,12 @@
 <div class="col-sm-3 text-center">
 <img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        
-<br>
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
 <img src="imgs/s11.png" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<img src="imgs/al-arafa.gif" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>
