--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		      	<div class="prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
 </div>
+
+<div class="line line-lg w-3x b-b m-auto"></div>
+
 		      	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
 
