--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>musammatsamina.github.io</title>
 		<meta name="description" content="Musammat Samina">
-		<meta name="viewport" content="990, initial-scale=1" />
+		<meta name="viewport" content="width=990, initial-scale=1" />
 
 		<link rel="shortcut icon" href="/favicon.ico">
 
