--- a/index.html
+++ b/index.html
@@ -595,9 +595,9 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-<a href="https://www.facebook.com/benarashiworld?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/benarosi.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://www.facebook.com/groups/mirpurbenaroshipolli/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/benaros.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
-		        <h3 class="text-info"> বেনারসি শাড়ি </h3>
+		        <h3 class="text-info"> Benaroshi Saree-বেনারসি শাড়ি </h3>
 				      </a>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
