--- a/index.html
+++ b/index.html
@@ -494,6 +494,11 @@
 <img src="imgs/al-arafa.gif" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<img src="imgs/141508.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
 </div>
 		 </div>
 </section>
