--- a/index.html
+++ b/index.html
@@ -497,8 +497,6 @@
 
 <img src="imgs/141508.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
-<div class="line line-lg w-3x b-b b-danger m-auto"></div>
-
 </div>
 		 </div>
 </section>
@@ -507,7 +505,7 @@
 		  <div class="container">
 		      
 <div class="row">
-<div class="col-sm-12 text-center m-v p-v-xl">
+<div class="col-sm-12 text-center">
 		      	<img src="imgs/s12.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        
 </div>	
