--- a/poem.html
+++ b/poem.html
@@ -76,7 +76,6 @@
 <div class="item"><img src="imgs/p23.jpg" alt=""></div>
 <div class="item"><img src="imgs/p24.jpg" alt=""></div>
 
-
 <div class="item"><img src="imgs/p25.jpg" alt=""></div>
 <div class="item"><img src="imgs/p26.jpg" alt=""></div>
 <div class="item"><img src="imgs/p27.jpg" alt=""></div>
@@ -93,6 +92,7 @@
 <div class="item"><img src="imgs/p38.jpg" alt=""></div>
 <div class="item"><img src="imgs/p39.jpg" alt=""></div>
 <div class="item"><img src="imgs/p40.jpg" alt=""></div>
+
 <div class="item"><img src="imgs/p41.jpg" alt=""></div>
 <div class="item"><img src="imgs/p42.jpg" alt=""></div>
 <div class="item"><img src="imgs/p43.jpg" alt=""></div>
@@ -105,7 +105,15 @@
 <div class="item"><img src="imgs/p50.jpg" alt=""></div>
 <div class="item"><img src="imgs/p51.jpg" alt=""></div>
 <div class="item"><img src="imgs/p52.jpg" alt=""></div>
-</div>
+
+<div class="item"><img src="imgs/p53.jpg" alt=""></div>
+<div class="item"><img src="imgs/p54.jpg" alt=""></div>
+<div class="item"><img src="imgs/p55.jpg" alt=""></div></div>
+<div class="item"><img src="imgs/p56.jpg" alt=""></div>
+<div class="item"><img src="imgs/p57.jpg" alt=""></div>
+<div class="item"><img src="imgs/p58.jpg" alt=""></div>
+<div class="item"><img src="imgs/p59.jpg" alt=""></div>
+
 </div>
 </section>
         <section class="separator">
