--- a/poem.html
+++ b/poem.html
@@ -113,7 +113,7 @@
 <div class="item"><img src="imgs/p57.jpg" alt=""></div>
 <div class="item"><img src="imgs/p58.jpg" alt=""></div>
 <div class="item"><img src="imgs/p59.jpg" alt=""></div>
-
+</div></div>
 </div>
 </section>
         <section class="separator">
