--- a/index.html
+++ b/index.html
@@ -684,6 +684,27 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 		 </div>
 		</section>
 
+  <section class="bg-img text-center">
+        <div class="container">
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+          <h2>
+            <strong>Subscribe</strong>
+          </h2>
+          <h6 class="font-alt">Get weekly top new jobs delivered to your inbox</h6>
+          <br><br>
+          <form class="form-subscribe" action="#">
+            <div class="input-group">
+              <input type="text" class="form-control input-lg" placeholder="Your eamil address">
+              <span class="input-group-btn">
+                <button class="btn btn-success btn-lg" type="submit" >Subscribe</button>
+              </span>
+            </div>
+          </form>
+        </div>
+      </section>
+ 
+
+
 <section class="separator">
 			<div class="decor-svg">
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
