--- a/index.html
+++ b/index.html
@@ -684,8 +684,10 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 		 </div>
 		</section>
 
-  <section class="bg-img text-center">
+  <section class="p-v-xl text-center">
         <div class="container">
+<div class="row">
+<div class="col-sm-6">
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
           <h2>
             <strong>Subscribe</strong>
@@ -701,6 +703,8 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
             </div>
           </form>
         </div>
+</div>
+</div>
       </section>
  
 
