--- a/index.html
+++ b/index.html
@@ -769,6 +769,15 @@ s0.parentNode.insertBefore(s1,s0);
 
 <script>
 
+// Note:
+// - A separate .js-* prefixed selector is used to handle JS interactions.
+// - Using jQuery
+
+$('.js-newsletter-form').on('submit', (e) => {
+	e.preventDefault(); // Prevent a page reload for this example and for asynchronous calls.
+	$('.newsletter__form').html('<p>Thank you!</p>');
+});
+
     function addHTML() {
          var el, i, domEl, fileName, xmlHttp;
          
