--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
   <section class="p-v-xl text-center">
         <div class="container">
 <div class="row">
-<div class="col-sm-6">
+<div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
           <h2>
             <strong>Subscribe</strong>
