--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 				      
 
-   <a href="https://thedailystar.net" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/thedailystar.net.jpg" alt="" class="img-full wrapper-xs bg-white>
+   <a href="https://epaper.thedailystar.net" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/thedailystar.net.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> The Daily Star (dot) Net </h3>
 				      </a>
