--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		        <h3 class="text-info"> Samakal </h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-				        <a href="https://dailyjanakantha.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/dailyjanakantha.com.jpg" alt="" class="img-full wrapper-xs bg-white>
+				        <a href="https://epaper.dailyjanakantha.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/dailyjanakantha.com.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Daily Janakantha </h3>
 				      </a>
