--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
 </section>
 
-<section class="p-v-xl bg-light">
+<section class="bg-light">
 		  <div class="container">
 		      
 <div class="row">
