--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	    <link rel="stylesheet" href="bower_components/simple-line-icons/css/simple-line-icons.css" />
 	    
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
+<link rel="stylesheet" href="dist/css/style.css" />
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <link rel="stylesheet" href="https://kit.fontawesome.com/4ff5cc0e27.css" crossorigin="anonymous">
  
