--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
 </div>
 
 <div class="line line-lg w-3x b-b m-auto"></div>
+visit count:<div class="website-counter"></div>
+  <!--<button id="reset">Reset</button>-->		
 
-		      	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
+<div class="line line-lg w-3x b-b m-auto"></div>
+      	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
 
  <div class="col-sm-6 text-center">
