--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 
 <div class="line line-lg w-3x b-b m-auto"></div>
 visit count:<div class="website-counter"></div>
-  <!--<button id="reset">Reset</button>-->		
-
-<div class="line line-lg w-3x b-b m-auto"></div>
+  <!--<button id="reset">Reset</button>-->		<br>
       	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
 
