--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="line line-lg w-3x b-b m-auto"></div>
-visit count:<div class="website-counter"></div>
+<span>visit count:</span><span class="website-counter"></span>
   <!--<button id="reset">Reset</button>-->		<br>
       	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
