--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="col-sm-6 text-center">
 		      	<div class="prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
-</div>
+</div><br>
 <span>visit count:</span><span class="website-counter"></span>
   <!--<button id="reset">Reset</button>-->		<br>
       	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
