--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <div class="col-sm-6 text-center">
 		      	<div class="prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
-</div><br>
+</div><!----<br>
 <span>visit count:</span><span class="website-counter"></span>
-  <!--<button id="reset">Reset</button>-->		<br>
+  <!--<button id="reset">Reset</button>-->		<br>---->
       	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
 
@@ -727,50 +727,6 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="b7uJTg1q"></script>
 
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/64a2c13794cf5d49dc613cfd/1h4ds5i93';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-
-<!--Start of visitor Script-->
-<script type="text/javascript">
-var counterContainer = document.querySelector(".website-counter");
-var resetButton = document.querySelector("#reset");
-var visitCount = localStorage.getItem("page_view");
-
-// Check if page_view entry is present
-if (visitCount) {
-  visitCount = Number(visitCount) + 1;
-  localStorage.setItem("page_view", visitCount);
-} else {
-  visitCount = 1;
-  localStorage.setItem("page_view", 1);
-}
-counterContainer.innerHTML = visitCount;
-
-// Adding onClick event listener
-resetButton.addEventListener("click", () => {
-  visitCount = 1;
-  localStorage.setItem("page_view", 1);
-  counterContainer.innerHTML = visitCount;
-});
-
-</script>
-<!----End visitor count script ------>
-<script>
-
-
-   </script>
 
 </body>
 </html> 
