--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-/***Author: Musammat Samina
+<!---Author: Musammat Samina
 Designation: Software Engineer
 Mobile: 01722393251
 Address: C/O Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.
 Profile: https://facebook.com/musammat.samina
-***/
+---->
 <!DOCTYPE html>
 <html class="no-js">
 	<head>
