--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Profile: https://facebook.com/musammat.samina
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
 </div><!----<br>
 <span>visit count:</span><span class="website-counter"></span>
-  <!--<button id="reset">Reset</button>-->		<br>---->
+  <button id="reset">Reset</button>	<br>---->
       	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
 
