--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="b7uJTg1q"></script>
 
-<script src="text/javascript">
+<script>
 
  function addHTML() {
          var el, i, domEl, fileName, xmlHttp;
