--- a/index.html
+++ b/index.html
@@ -403,7 +403,14 @@ Profile: https://facebook.com/musammat.samina
 <a href="https://smartbd.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/smartbd.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info">Smart Technologies  Ltd. </h3>
-				      </a>							
+				      </a>				
+			
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://dbid.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/dbid.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info">Digital Business Identification Number </h3>
+				      </a>		
      </p>
 				       </div>
 				    </div>
