--- a/index.html
+++ b/index.html
@@ -743,7 +743,11 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 
 <div class="col-sm-3 col-sm-offset-1 text-center">
-<img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+
+<!-- 21:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-21by9">
+  <iframe class="embed-responsive-item" src="..."></iframe>
+</div>
 	        
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
