--- a/index.html
+++ b/index.html
@@ -565,6 +565,8 @@ Profile: https://facebook.com/musammat.samina
 <div class="col-sm-12 text-center">
 		      	<img src="imgs/s23.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        
+<div class="line line-lg w-3x b-b m-auto"></div>
+
 </div>	
 
   <div class="col-sm-2 text-center">
