--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <!-- 21:9 aspect ratio -->
 <div class="embed-responsive embed-responsive-4by3">
- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lpR_4ccB0nA?feature=player_detailpage#t=65" allowfullscreen></iframe>
+ <iframe class="embed-responsive-item" src="https://youtu.be/dc74RXs9OKI" allowfullscreen></iframe>
 </div>
 	        
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
