--- a/index.html
+++ b/index.html
@@ -753,14 +753,14 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 	        
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<img src="imgs/s11.png" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+<img src="imgs/sonali_bank.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 <img src="imgs/al-arafa.gif" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<img src="imgs/141508.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+<img src="imgs/ukti.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 </div>
 			  </section>
