--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<img src="imgs/ukti.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+<img src="imgs/ukti1.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 </div>
 			  </section>
