--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Profile: https://facebook.com/musammat.samina
 		       
   <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://epaper.protidinerbangladesh.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/protidinerbangladesh.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://epaper.protidinerbangladesh.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/protidinbd.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Protidiner Bangladesh </h3>
 				      </a>				   
