--- a/index.html
+++ b/index.html
@@ -775,13 +775,17 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 		      
 <div class="row">
 <div class="col-sm-12 text-center m-v p-v-xl">
-		      	<img src="imgs/s22.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/university.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
-<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<div class="line line-lg w-3x b-b m-auto"></div>
 
 <!---https://www.facebook.com/20531316728/posts/10154009990506729/--->
 
 <div class="fb-post" data-href="https://m.facebook.com/story.php?story_fbid=pfbid0bZWaJSLvA9rtU1biyoqEWP1RdgGv4ePScqcvYxMLE2B7V1EprRHfC3zntJngKuPbl&id=1357834815&mibextid=Nif5oz" data-width="500" data-show-text="true"><blockquote cite="https://m.facebook.com/story.php?story_fbid=pfbid0bZWaJSLvA9rtU1biyoqEWP1RdgGv4ePScqcvYxMLE2B7V1EprRHfC3zntJngKuPbl&id=1357834815&mibextid=Nif5oz" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/facebook/">Facebook</a> on&nbsp;<a href="https://m.facebook.com/story.php?story_fbid=pfbid0bZWaJSLvA9rtU1biyoqEWP1RdgGv4ePScqcvYxMLE2B7V1EprRHfC3zntJngKuPbl&id=1357834815&mibextid=Nif5oz">Thursday, March 05, 2023</a></blockquote></div>
+
+<div class="line line-lg w-3x b-b m-auto"></div> 	
+
+<img src="imgs/s22.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 </div>	
 </div>
