--- a/index.html
+++ b/index.html
@@ -770,11 +770,11 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 </div>
 			  </section>
 
-<section class="p-v-xl bg-light">
+<section class="bg-light">
 		  <div class="container">
 		      
 <div class="row">
-<div class="col-sm-12 text-center m-v p-v-xl">
+<div class="col-sm-12 text-center">
 		      	<img src="imgs/university.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
 <div class="line line-lg w-3x b-b m-auto"></div>
