--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Profile: https://facebook.com/musammat.samina
     </div>
   </div>
 
-<div class="col-sm-2 text-center p-v m-v-xl">
+<div class="col-sm-2 text-center">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">E-paper 🗞</h5>
