--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Profile: https://facebook.com/musammat.samina
 
 <div class="line line-lg w-3x b-b m-auto"></div>
 
-<a href="https://ebhorerkagoj.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bhorerkagoj.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://ebhorerkagoj.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bhorerkagoj.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> E - Bhorerkagoj </h3>
 				      </a>										       
