--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Profile: https://facebook.com/musammat.samina
 
 						  <a href="https://tbsnews.net" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/tbsnews.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
-		        <h3 class="text-info">TVSNEWS (DOT) NET</h3>
+		        <h3 class="text-info">The Business Standard </h3>
 				      </a>						
 		        <div class="line line-lg w-3x b-b m-auto"></div>
 					      <a href="https://jugantor.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/jugantor.com.jpg" alt="" class="img-full wrapper-xs bg-white>
