--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Profile: https://facebook.com/musammat.samina
 				      </a>
   <div class="line line-lg w-3x b-b m-auto"></div>
 
-<a href="https://bangladeshtimes.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bdtimes.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://bangladeshtimes.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bdtimes.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Bangladesh Times </h3>
 				      </a>			
