--- a/index.html
+++ b/index.html
@@ -570,10 +570,20 @@ Profile: https://facebook.com/musammat.samina
 		
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://www.facebook.com/Cumillaandkhadi?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cumillaandkhadi.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://www.facebook.com/Cumillaandkhadi" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cumillaandkhadi.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> Cumillar Khadi - কুমিল্লার খাদি </h3>
 				      </a>			
+
+
+	
+<div class="line line-lg w-3x b-b m-auto"></div>
+
+<a href="https://globalbrand.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/globalbrand.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info"> Global Brand </h3>
+				      </a>			
+
 </p>
 				         </div>
 				    </div>
