--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Profile: https://facebook.com/musammat.samina
 				      </a>
 					 <div class="line line-lg w-3x b-b m-auto"></div>			
 			
-					 <a href="https://ittefaq.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ittefaq.png" alt="" class="img-full wrapper-xs bg-white>
+					 <a href="https://epaper.ittefaq.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ittefaq.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info">Ittefaq</h3>
 				      </a>						
