--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Profile: https://facebook.com/musammat.samina
 		        <h3 class="text-info">Jugantor (dot) com</h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b m-auto"></div>
-				         <a href="https://bd-pratidin.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bd-pratidin.com.jpg" alt="" class="img-full wrapper-xs bg-white>
+				         <a href="https://ebdpratidin.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bd-pratidin.com.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Bangladesh Pratidin </h3>
 				      </a>
@@ -138,7 +138,7 @@ Profile: https://facebook.com/musammat.samina
 <div class="line line-lg w-3x b-b m-auto"></div>
         <p class="card-text">
 
-<a href="https://dailynayadiganta.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/dailynayadiganta.com.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://enayadiganta.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/dailynayadiganta.com.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Daily Naya Diganta </h3>
 				      </a>
