--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 				<div class="row p-v m-t-md text-center">
 					
 					<p class="m-b-none">
-						Build with <i class="fa fa-heart-o m-h-5x"></i> by <a href="https://facebook.com/musammat.samina" target="_blank"> Musammat Samina. Daughter of Al-hajj Md. Abdul Khalek and Mst. Sufia Begum.</a>
+						Build with <a href="https://www.facebook.com/profile.php?id=100075473425112" target="_blank">Samina Mart</a> by <a href="https://facebook.com/musammat.samina" target="_blank"> Musammat Samina.</a> Daughter of Al-hajj Md. Abdul Khalek and Mst. Sufia Begum.
 					</p>
 					<p>
 						2017 &copy; Bootaide
