--- a/index.html
+++ b/index.html
@@ -838,6 +838,18 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <img src="imgs/s22.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
+<div class="line line-lg w-3x b-b m-auto"></div>
+
+<h5 class="text-primary">
+<b>Notes:<b><br>
+1. Website are noise muted news reader site.<br>
+2. Here you can modify your information which are not yet include your professional life cycle.<br>
+3. You can easily generate or correct information like dbid, etin, certificate etc.
+<br>
+4. Some upgraded technology you can purchase here included link.<br>
+5. Sweets, uhhh how i forget every person toung are found this type of product.
+
+</h5>
 </div>	
 </div>
 		 </div>
