--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ ACI Seed Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>				     
  					
-<a href="https://bracied.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="ings/bracied.png" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://bracied.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bracied.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Brac IED </h3>
 				      </a>
