--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <div class="line line-lg w-3x b-b m-auto"></div>
 
-<h6 class="text-primary text-justify">
+<p class="text-primary text-justify"><small>
 <b>Notes:<b><br>
 1. Website are noise muted news reader site.<br>
 2. Here you can modify your information which are not yet include your professional life cycle.<br>
@@ -854,7 +854,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 <br>
 4. Some upgraded technology you can purchase here included link.<br>
 5. Sweets, uhhh how i forget every person toung are found this type of product.
-</h6>
+</small></p>
 
 </div>	
 </div>
