--- a/navigation.html
+++ b/navigation.html
@@ -27,7 +27,7 @@
 							<a href="blog.html">Blog</a>
 						</li>
                                                 <li>
-							<a href="gallery.html">News</a>
+							<a href="point.html">Journey</a>
 						</li>
 						<li>
 							<a href="contact.html">Contact</a>
