--- a/navigation.html
+++ b/navigation.html
@@ -1,3 +1,10 @@
+<!---Author: Musammat Samina
+Designation: Software Engineer
+Email : musammatsamina@gmail.com
+Mobile: 01722393251
+Address: C/O Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.
+Profile: https://facebook.com/musammat.samina
+---->
 <header class="bg-white navbar-fixed-top box-shadow">
 			<div class="container">
 				<div class="navbar-header">
@@ -27,7 +34,7 @@
 							<a href="blog.html">Blog</a>
 						</li>
                                                 <li>
-							<a href="point.html">Journey</a>
+							<a href="point.html">Sofor</a>
 						</li>
 						<li>
 							<a href="contact.html">Contact</a>
